plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

group 'com.annimon'
version '7.4.0-SNAPSHOT'
ext.isReleaseVersion = !version.endsWith("SNAPSHOT")

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

ext.telegramBotsVersion = '7.4.1'
ext.jacksonVersion = '2.17.1'
ext.junit5Version = '5.10.2'
ext.jaxbVersion = '2.3.1'

dependencies {
    api "org.telegram:telegrambots-longpolling:$telegramBotsVersion"
    api "org.telegram:telegrambots-webhook:$telegramBotsVersion"
    api "org.telegram:telegrambots-client:$telegramBotsVersion"
    api "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
    api "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
    api 'org.jetbrains:annotations:24.1.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junit5Version"
    testImplementation "org.junit.jupiter:junit-jupiter-params:$junit5Version"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit5Version"
    testImplementation "org.junit.vintage:junit-vintage-engine:$junit5Version"
    testImplementation 'org.assertj:assertj-core:3.26.0'
}

test {
    useJUnitPlatform()
}

if (isReleaseVersion) {
    apply from: 'signing.gradle'
}
